--- a/untitled folder 2/main.css
+++ b/untitled folder 2/main.css
@@ -1,12 +1,13 @@
 body {
   font-family: Arial, sans-serif;
   max-width: 70rem;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 header {
-  background-color: darkgray;
+  background-color: blue;
+  color: white;
   font-size: 18px;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -51,7 +52,9 @@ section::after {
 }
 
 img {
-  width: 100%;
+  width: 50%;float: left;
+
+padding: 10px;
 }
 
 .caption {
