--- a/untitled folder 2/main.css
+++ b/untitled folder 2/main.css
@@ -85,3 +85,14 @@ p {
   margin-top: 30px;
   margin-bottom: 30px;
 }
+blockquote {
+
+font-family: times;
+
+font-size: 24px;
+
+font-style: italic;
+
+}
+
+
